--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8081
 
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/portal?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
+spring.datasource.url=jdbc:mysql://localhost:3306/tobacco?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=000000
+spring.datasource.password=l15933798396
