--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ spring.thymeleaf.encoding=UTF-8
 
 spring.mvc.static-path-pattern=/static/**
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.2.188:3306/tobacco?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
-#spring.datasource.username=root
-#spring.datasource.password=000000
-
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/tobacco?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
+spring.datasource.url=jdbc:mysql://192.168.2.188:3306/tobacco?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=000000
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/tobacco?serverTimezone=UTC&autoReconnect=true&useSSL=false&characterEncoding=utf8&useUnicode=true
+#spring.datasource.username=root
+#spring.datasource.password=000000
